--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,30 +1,11 @@
-.dropdown__header{
-    display: flex;
-    margin-inline: auto;
-    border-radius: 5px;
-    background-color: #FF6060;
-    ;
-    width: 1023px;
-    text-decoration: none;
-    color: white;
-
-}
-
 p{
-    background-color: #F6F6F6;
-    ;
-    color: #FF6060;
-    ;
-    border-radius: 5px;
-    display: flex;
-    margin-inline: auto;
     margin-top: 0px;
-    width: 1023px;
+    margin-inline: 10px;
 }
 
 svg{
     margin-left: auto;
-    margin-right: 5px;
+    margin-right: 10px;
     margin-block: 5px;
 }
 
