--- a/src/styles/Carrousel.css
+++ b/src/styles/Carrousel.css
@@ -1,4 +1,96 @@
 .carrousel {
-    height: 280px;
-    margin: 0 auto;
+  height: 415px;
+  margin: 0 auto;
+}
+
+.carrousel-index {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  left: 48.95%;
+  right: 49.11%;
+  top: 86.19%;
+  bottom: 6.01%;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 142.6%;
+
+  display: flex;
+  align-items: flex-end;
+  text-align: center;
+
+  color: #ffffff;
+}
+
+.left-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  left: 150px;
+  font-size: 45px;
+  color: #fff;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.right-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  right: 150px;
+  font-size: 45px;
+  color: #fff;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.right-arrow img {
+  transform: rotate(180deg);
+  transition: 0.4s ease-in-out;
+}
+
+.slide {
+  margin-inline: auto;
+  margin-top: 20px;
+  max-width: 1240px;
+  height: 415px;
+  border-radius: 10px;
+  background-size: cover;
+  background-position: center;
+}
+
+.slider {
+  position: relative;
+  height: 415px;
+}
+
+.host {
+  display: flex;
+  margin-left: 1210px;
+  margin-right: 100px;
+  margin-top: -130px;
+}
+
+.host__name {
+  color: #ff6060;
+}
+
+.host__picture img {
+  border-radius: 75px;
+  width: 64px;
+}
+
+@media screen and (max-width: 550px) {
+  .carrousel i {
+    font-size: 2.2rem;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 0.9);
+  }
+  .carrousel i {
+    font-size: 4rem;
+    color: white;
+  }
 }
