--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 15px;
   background-color: black;
   color: white;
   justify-content: space-between;
@@ -18,7 +19,25 @@
   color: white;
 }
 
-.footer__copyright{
-    font-size: 24px;
+.footer__copyright {
+  margin-bottom: 10px;
+  font-size: 24px;
 }
 
+@media (max-width: 375px) {
+  .footer {
+      width: 375px;
+      height: 209px;
+  }
+
+  .footer img {
+      height: 39.44px;
+      width: 150px;
+      margin-top: 66px;
+      margin-left: 100px;
+  }
+
+  .footer p {
+      font-size: 12px;
+      }
+}
