--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,15 +1,14 @@
-.title h1{
-    font-size: 48px;
-    text-align: center;
-}
-
-.title{
-    border: 3px solid black;
-    background: url(../assets/nature.png);
-    border-radius: 25px;
+.home__title{
+    display: flex;
+    align-items: center;
     margin-inline: 100px;
     margin-block: 30px;
-    height: 223px;
-    border-radius: 15px;
     object-fit: cover;
+    height: 223px;;
+}
+
+@media screen and (max-width: 700px) {
+    .home__title{
+        margin-inline: 50px;
+    }
 }
