--- a/src/styles/Carrousel.css
+++ b/src/styles/Carrousel.css
@@ -84,12 +84,12 @@
 }
 
 @media screen and (max-width: 550px) {
-  .carrousel i {
+  .carrousel img {
     font-size: 2.2rem;
     font-weight: 600;
     color: rgba(255, 255, 255, 0.9);
   }
-  .carrousel i {
+  .carrousel img {
     font-size: 4rem;
     color: white;
   }
