--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -13,9 +13,43 @@ svg{
     margin: 110px;
 }
 
-.coverAbout{
-    display: flex;
+.title__image{
+    max-width: 1240px;
+    margin-inline: 100px;
     margin-top: 15px;
-    margin-inline: auto;
+}
+
+.coverAbout{
     border-radius: 15px;
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.body__about{
+    margin-inline: 100px;
+}
+
+@media (max-width: 700px) {
+    .title__image{
+        margin-inline: 50px;
+    }
+    .coverAbout{
+        height: 100px;
+    }
+    .body__about{
+        margin-inline: 50px;
+    }
+}
+
+@media (max-width: 375px) {
+    .title__image{
+        margin-inline: 20px;
+    }
+    .coverAbout{
+        height: 100px;
+    }
+    .body__about{
+        margin-inline: 20px;
+    }
 }
