--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -20,12 +20,11 @@
   font-weight: 500;
   text-align: center;
   position: absolute;
-  top: 40px;
+  top: 20%;
 }
 @media screen and (max-width: 700px) {
   .banner h1 {
     font-size: 24px;
-    margin-left: 0.6rem;
   }
   .banner {
     height: 128px;
