--- a/src/styles/Error.css
+++ b/src/styles/Error.css
@@ -23,3 +23,9 @@ text-align: center;
     font-family: Montserrat;
     font-size: 18px;
 }
+
+@media screen and (max-width: 700px) {
+    .error__title{
+        font-size: 96px;
+    }
+  }
