--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,14 +1,23 @@
-.home__title{
-    display: flex;
-    align-items: center;
-    margin-inline: 100px;
-    margin-block: 30px;
-    object-fit: cover;
-    height: 223px;;
+.home__title {
+  display: flex;
+  align-items: center;
+  margin-inline: 100px;
+  margin-block: 30px;
+  object-fit: cover;
+  height: 223px;
 }
 
 @media screen and (max-width: 700px) {
-    .home__title{
-        margin-inline: 50px;
-    }
+  .home__title {
+    margin-inline: 50px;
+    margin-top: 40px;
+    margin-bottom: 0px;
+    height: 128px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .home__title {
+    margin-inline: 20px;
+  }
 }
