--- a/src/styles/Location.css
+++ b/src/styles/Location.css
@@ -1,20 +1,89 @@
-.title{
-    margin-left: 100px;
-    margin-bottom: 0px;
-    color: #FF6060;
+.presentation {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
-ul{
-    margin-top: 0px;
+.location__header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 100px;
+}
+
+.title__subtitle {
+  color: #ff6060;
 }
 
 .description__equipements {
-    display: flex;
-    justify-content: space-between;
-    margin-inline: 100px;
-    margin-top: 35px;
+  display: flex;
+  justify-content: space-between;
+  margin-inline: 100px;
+  margin-top: 35px;
 }
 
-.title__name__picture{
+.location__subheader {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 100px;
+  margin-bottom: 10px;
+}
+
+.stars {
+  display: flex;
+  flex-direction: row;
+}
+
+li {
+  list-style-type: none;
+}
+
+ul {
+  margin-top: 0px;
+  padding: 0px;
+}
+
+@media screen and (max-width: 700px) {
+  .body {
+    margin: 0 20px;
+  }
+  .title {
+    margin-left: 25px;
+  }
+  .description__equipements {
+    margin-inline: 25px;
+  }
+  .location__header {
+    margin-left: 0px;
+  }
+
+  .location__subheader {
+    margin-right: 25px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .presentation {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: space-between; */
+    margin-left: 6%;
+    width: 85%;
+  }
+  .description__equipements {
+    display: flex;
+    margin-top: 10px;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .presentation{
+    margin-inline: 0px;
+  }
 }
