--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -12,7 +12,7 @@
     text-decoration: underline;
 }
 
-.about{
+.nav a.about{
     margin-left: 50px;
 }
 
@@ -20,7 +20,7 @@
     .nav a{
       font-size: 16px;
     }
-    .about{
+    .nav a.about{
         margin-left: 16px;
     }
 }
