--- a/src/styles/Tag.css
+++ b/src/styles/Tag.css
@@ -1,7 +1,5 @@
 .tags {
     display: flex;
-    margin-left: 100px;
-    color: #ff6060;
 }
 
 .tag{
@@ -17,3 +15,12 @@
 .tag__name{
     font-size: 14px;
 }
+
+@media screen and (max-width: 700px) {
+    .tag {
+      display: flex;
+      flex-direction: row;
+      justify-content: left;
+      flex-wrap: wrap;
+    }
+}  
