--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -16,7 +16,7 @@
 .banner h1 {
   width: 100%;
   color: white;
-  font-size: 2.8rem;
+  font-size: 44px;
   font-weight: 500;
   text-align: center;
   position: absolute;
