--- a/src/styles/Location.css
+++ b/src/styles/Location.css
@@ -1,7 +1,6 @@
 .presentation {
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: space-between;
 }
 
@@ -18,9 +17,17 @@
 
 .description__equipements {
   display: flex;
-  justify-content: space-between;
   margin-inline: 100px;
   margin-top: 35px;
+}
+
+.description {
+  width: 100%;
+}
+
+.equipements {
+  width: 100%;
+  margin-left: 73px;
 }
 
 .location__subheader {
@@ -30,12 +37,7 @@
   align-items: center;
   margin-right: 100px;
   margin-bottom: 10px;
-}
-
-.stars {
-  display: flex;
-  flex-direction: row;
-}
+} 
 
 li {
   list-style-type: none;
@@ -53,37 +55,44 @@ ul {
   .title {
     margin-left: 25px;
   }
+  .presentation {
+    flex-direction: column;
+  }
   .description__equipements {
-    margin-inline: 25px;
+    margin-inline: 20px;
+    margin-top: 0px;
+    flex-wrap: wrap;
+  }
+  .equipements{
+    margin-top: 20px;
+    margin-left: 0px;
+  }
+  .location__header {
+    margin-left: 20px;
+  }
+
+  .location__subheader {
+    margin-inline: 0px;
+    flex-direction: row-reverse;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .description__equipements {
+    display: flex;
+    margin-top: 10px;
+    margin-inline: 0px;
+    flex-direction: row;
   }
   .location__header {
     margin-left: 0px;
   }
-
   .location__subheader {
-    margin-right: 25px;
-  }
-}
-
-@media screen and (max-width: 375px) {
-  .presentation {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* justify-content: space-between; */
-    margin-left: 6%;
-    width: 85%;
+    flex-direction: row-reverse;
+    justify-content: space-between;
   }
-  .description__equipements {
-    display: flex;
-    margin-top: 10px;
-    flex-direction: row;
-    justify-content: space-around;
-  }
-}
-
-@media screen and (max-width: 375px) {
-  .presentation{
-    margin-inline: 0px;
+  .host {
+    width: 100%;
   }
 }
