--- a/src/styles/Avatar.css
+++ b/src/styles/Avatar.css
@@ -2,16 +2,22 @@
     display: flex;
     align-items: center;
     margin-top: 45px;
+    width: 160px;
 }
 
 .avatar-main img {
     width: 64px;
     height: 64px;
     border-radius: 50px;
+    margin-left: 10px;
+}
+
+.avatar-name{
+    width: 85px;
 }
 
 .avatar-name p {
-    width: 93px;
+    width: 75px;
     font-family: "Montserrat", sans-serif;
     font-size: 18px;
     text-align: right;
@@ -24,7 +30,7 @@
         margin-top: 5px;
     }
     .avatar-name p {
-        margin-left: 35px;
+        margin: 0px;
         font-size: 14px;
     }
 }
