--- a/src/styles/Carrousel.css
+++ b/src/styles/Carrousel.css
@@ -1,5 +1,5 @@
 .carrousel {
-  height: 415px;
+  height: 100%;
   margin: 0 auto;
 }
 
@@ -7,10 +7,8 @@
   display: flex;
   justify-content: center;
   position: absolute;
-  left: 48.95%;
-  right: 49.11%;
-  top: 86.19%;
-  bottom: 6.01%;
+  left: 50%;
+  bottom: 20px;
   font-family: 'Montserrat';
   font-size: 18px;
   color: #ffffff;
@@ -44,7 +42,7 @@
 .slider {
   position: relative;
   margin-inline: 100px;
-  height: 415px;
+  height: 100%;
 }
 
 @media screen and (max-width: 700px) {
