--- a/src/styles/Error.css
+++ b/src/styles/Error.css
@@ -1,31 +1,33 @@
-.error__title{
-color: #FF6060;
-font-family: Montserrat;
-font-size: 288px;
-font-weight: 700;
-line-height: 411px;
-text-align: center;
+.error__title {
+  color: #ff6060;
+  font-family: Montserrat;
+  font-size: 288px;
+  font-weight: 700;
+  line-height: 411px;
+  text-align: center;
 }
 
-.detail{
-    color: #FF6060;
-    font-family: Montserrat;
-    font-size: 36px;
-    text-align: center;
-    margin-bottom: 182px;
+.detail {
+  color: #ff6060;
+  font-family: Montserrat;
+  font-size: 36px;
+  text-align: center;
+  margin-bottom: 182px;
 }
 
-.link__home{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 169px;
-    color: #FF6060;
-    font-family: Montserrat;
-    font-size: 18px;
+.link__home {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 169px;
+  color: #ff6060;
+  font-family: Montserrat;
+  font-size: 18px;
 }
 
 @media screen and (max-width: 700px) {
-    .error__title{
-        font-size: 96px;
-    }
+  .error__title {
+    font-size: 96px;
+    line-height: 140px;
+    margin-top: 176px;
   }
+}
