--- a/src/styles/Location.css
+++ b/src/styles/Location.css
@@ -33,7 +33,6 @@
 .location__subheader {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   margin-right: 100px;
   margin-bottom: 10px;
@@ -55,6 +54,9 @@ ul {
   .title {
     margin-left: 25px;
   }
+  .slide{
+    height: 335px;
+  }
   .presentation {
     flex-direction: column;
   }
@@ -70,16 +72,15 @@ ul {
   .location__header {
     margin-left: 20px;
   }
-
   .location__subheader {
-    margin-inline: 0px;
+    justify-content: space-between;
     flex-direction: row-reverse;
+    margin-inline: 20px;
   }
 }
 
 @media screen and (max-width: 375px) {
   .description__equipements {
-    display: flex;
     margin-top: 10px;
     margin-inline: 0px;
     flex-direction: row;
@@ -88,11 +89,6 @@ ul {
     margin-left: 0px;
   }
   .location__subheader {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-  }
-  .host {
-    width: 100%;
+    margin-inline: 0px;
   }
 }
