--- a/src/styles/Location.css
+++ b/src/styles/Location.css
@@ -43,8 +43,9 @@ li {
 }
 
 ul {
-  margin-top: 0px;
+  margin-top: 10px;
   padding: 0px;
+  margin-left: 20px;
 }
 
 @media screen and (max-width: 700px) {
