--- a/Chenon_Evan_1_Code/src/styles/Carrousel.css
+++ b/Chenon_Evan_1_Code/src/styles/Carrousel.css
@@ -9,20 +9,20 @@
   position: absolute;
   left: 50%;
   bottom: 20px;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-size: 18px;
   color: #ffffff;
 }
 
 .arrow {
   position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    width: calc(100% - 30px);
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  width: calc(100% - 30px);
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px;
 }
 
 .arrow img {
@@ -45,18 +45,22 @@
   height: 100%;
 }
 
+.vector {
+  cursor: pointer;
+}
+
 @media screen and (max-width: 700px) {
-  .slider{
+  .slider {
     margin-inline: 25px;
   }
 
-  .left-arrow{
+  .left-arrow {
     font-size: large;
   }
 }
 
 @media screen and (max-width: 375px) {
-  .slider{
+  .slider {
     margin-inline: 0px;
   }
 }
